kube-manifests/01-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-devops-deployment
  labels:
    app: eks-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-devops
  template:
    metadata:
      labels:
        app: eks-devops
    spec:
      containers:
        - name: eks-devops
          image: CONTAINER_IMAGE # FOR DEVOPS Pipeline
          #image: 905418163484.dkr.ecr.ap-south-1.amazonaws.com/ecr-ecs-nginx:1.0.0 # FOR TESTING OR PRE-REQUISITE CHECKS
          ports:
            - containerPort: 80
